# NCA

./: CMakeLists.txt  README.md
c++/nca/: CMakeLists.txt  TODO  equilibrium.hpp  greater.hpp  green.hpp  hybridization.hpp  lesser.hpp  mixed.hpp  nca_equation.hpp  parameters.hpp  solver.cpp  solver.hpp  volterra.hpp
python/nca/: CMakeLists.txt  __init__.py  nca_desc.py  parameters_solve_p.rst  version.py.in
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  anderson.cpp  anderson.ref.h5  perf.cpp  volterra.cpp  volterra.ref.h5
